feat: detail modifications

--- a/plugins/project_packer/src/package.json
+++ b/plugins/project_packer/src/package.json
@@ -12,10 +12,24 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "blockbench-types": "^4.9.0",
     "typescript": "^4.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0",
     "ts-loader": "^8.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "blockbenchConfig": {
+    "title": "Project Packer ",
+    "author": "Luuk Kablan, Zegevlier",
+    "icon": "icon.png",
+    "description": "Manage your Minecraft resource pack / project and optimize it!",
+    "has_changelog": true,
+    "min_version": "4.11.0",
+    "max_version": "5.0.0",
+    "variant": "both",
+    "website": "https://github.com/LuckyLuuk12/Project-Packer",
+    "repository": "https://github.com/JannisX11/blockbench-plugins/tree/master/plugins/project_packer",
+    "bug_tracker": "https://github.com/LuckyLuuk12/Project-Packer/issues?q=sort%3Aupdated-desc+is%3Aissue+is%3Aopen"
+  }
 }
