--- a/plugins/project_packer/src/package.json
+++ b/plugins/project_packer/src/package.json
@@ -12,11 +12,11 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "blockbench-types": "^4.9.0",
-    "typescript": "^4.0.0",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0",
-    "ts-loader": "^8.0.0"
+    "blockbench-types": "4.12.2",
+    "typescript": "5.8.3",
+    "webpack": "5.99.7",
+    "webpack-cli": "6.0.1",
+    "ts-loader": "9.5.2"
   },
   "dependencies": {},
   "blockbenchConfig": {
